--- a/index.html
+++ b/index.html
@@ -27,30 +27,61 @@
     <p>Transforming spaces with quality craftsmanship.</p>
   </section>
 
-  <section id="about" class="content">
+  <section id="about" class="content about-section">
+  <div class="about-image">
+    <img src="images/about-us.jpg" alt="About MP General Contracting">
+  </div>
+  <div class="about-text">
     <h2>About Us</h2>
-    <p>With over 20 years in the construction industry, MP General Contracting delivers residential and commercial projects with unmatched quality. Our team is licensed, insured, and committed to exceeding expectations</p>
-  </section>
+    <p>At MP General Contracting LLC, we bring over <strong>20 years of experience</strong>. We have the ability of turning dreams into reality, whether it be residential or commercial projects, we deliver quality craftsmanship and customer satisfaction.</p>
+    <p>Licensed, insured, and driven by excellence — we work with you every step of the way to create spaces that inspire and endure.</p>
+    <a href="#services" class="btn">Explore Our Services</a>
+  </div>
+</section>
 
-  <section id="services" class="content">
-    <h2>Our Services</h2>
-    <ul>
-      <li>Roofing</li>
-      <li>Remodeling</li>
-      <li>Siding</li>
-      <li>Painting</li>
-      <li>Pavers</li>
-      <li>And More</li>
-    </ul>
-  </section>
+<section id="services" class="content services-section">
+  <h2>Our Services</h2>
+  <div class="service-grid">
+    <div class="service-card">
+      <img src="images/roofing.jpg" alt="Roofing">
+      <h3>Roofing</h3>
+      <p>Durable, weather-resistant roofing solutions to protect your home or business.</p>
+    </div>
+    <div class="service-card">
+      <img src="images/remodeling.jpg" alt="Remodeling">
+      <h3>Remodeling</h3>
+      <p>Transform your interiors with precision craftsmanship and stylish designs.</p>
+    </div>
+    <div class="service-card">
+      <img src="images/siding.jpg" alt="Siding">
+      <h3>Siding</h3>
+      <p>High-quality siding installation for long-lasting beauty and performance.</p>
+    </div>
+    <div class="service-card">
+      <img src="images/painting.jpg" alt="Painting">
+      <h3>Painting</h3>
+      <p>Expert interior and exterior painting to refresh and revitalize your space.</p>
+    </div>
+    <div class="service-card">
+      <img src="images/pavers.jpg" alt="Pavers">
+      <h3>Pavers</h3>
+      <p>Custom paving solutions to enhance your property’s curb appeal.</p>
+    </div>
+    <div class="service-card">
+      <img src="images/more.jpg" alt="More Services">
+      <h3>And More</h3>
+      <p>If you can imagine it, we can build it. <a href="portfolio.html" class="services-link">See our Portfolio!</a></p>
+    </div>
+  </div>
+</section>
 
   <section id="contact" class="content contact-info">
   <h2>Contact Us</h2>
   <div class="contact-container">
     <div class="logo-company">
-      <!-- Replace src with your actual logo image path -->
-      <img src="images/logo.png" alt="MP General Contracting Logo" class="logo" />
+      <img src="images/mpcontracting_logo.png" alt="MP General Contracting Logo" class="logo" />
       <h3>MP General Contracting LLC</h3>
+      <h4>Roofing & Contstruction</h4>
     </div>
 
     <div class="contact-details">
@@ -59,10 +90,10 @@
       <p><strong>Address:</strong> 19 Mountain Heights Ave,<br>Lincoln Park, NJ 07035</p>
 
       <div class="social-media">
-        <a href="https://facebook.com/yourpage" target="_blank" aria-label="Facebook" rel="noopener">
+        <a href="https://www.facebook.com/Mpgeneralcontractingllc" target="_blank" aria-label="Facebook" rel="noopener">
           <img src="images/facebook.svg" alt="Facebook" />
         </a>
-        <a href="https://instagram.com/yourpage" target="_blank" aria-label="Instagram" rel="noopener">
+        <a href="https://www.instagram.com/mp_general_contracting_llc/" target="_blank" aria-label="Instagram" rel="noopener">
           <img src="images/instagram.svg" alt="Instagram" />
         </a>
       </div>
