--- a/portfolio.html
+++ b/portfolio.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <header class="site-header">
-    <h1>Our Portfolio</h1>
-    <p>See the quality of our completed projects</p>
+    <img src="images/mpcontracting_logo.png" alt="MP General Contracting LLC Logo" class="header-logo" />
+    <h1>MP General Contracting LLC</h1>
+    <h3>Roofing & Contstruction</h3>
   </header>
 
   <nav>
