--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="site-header">
     <img src="images/mpcontracting_logo.png" alt="MP General Contracting LLC Logo" class="header-logo" />
     <h1>MP General Contracting LLC</h1>
-    <h3>Roofing & Contstruction</h3>
+    <h2 id="header">Roofing & Contstruction</h2>
   </header>
 
   <nav>
@@ -23,7 +23,7 @@
   </nav>
 
   <section class="hero">
-    <h2 class="herotitle">You Think It, We'll Build It</h2>
+    <h2 class="herotitle">Roof or Repair, Miguel's There</h2>
     <p>Transforming spaces with quality craftsmanship.</p>
   </section>
 
@@ -35,7 +35,7 @@
     <h2>About Us</h2>
     <p>At MP General Contracting LLC, we bring over <strong>20 years of experience</strong>. We have the ability of turning dreams into reality, whether it be residential or commercial projects, we deliver quality craftsmanship and customer satisfaction.</p>
     <p>Licensed, insured, and driven by excellence — we work with you every step of the way to create spaces that inspire and endure.</p>
-    <a href="#services" class="btn">Explore Our Services</a>
+    <a href="#contact" class="btn">Start Your Project</a>
   </div>
 </section>
 
