--- a/portfolio.html
+++ b/portfolio.html
@@ -29,11 +29,11 @@
 </nav>
   </header>
 
-  <main class="main portfolio-main">
+  <main class="portfolio-main">
     <section class="portfolio-hero">
       <div class="container">
         <h1 class="brand-title">Portfolio</h1>
-        <p class="section-intro">Explore our work below by clicking on an image to unlock the endless possibilities of our work.</p>
+        <p class="section-intro">Explore our completed projects by service category.</p>
       </div>
     </section>
 
